<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    android:orientation="vertical">

    <include layout="@layout/view_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_bg_red_stroke_radius_10"
        android:backgroundTint="#2C3241"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/modify_pwd_old"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_old"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="80dp"
            android:background="@null"
            android:hint="@string/modify_pwd_old_1"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/textColorC"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:text="初始密码为888888"
        android:textColor="@color/textColor6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_bg_red_stroke_radius_10"
        android:backgroundTint="#2C3241"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/modify_pwd_new"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_new"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="80dp"
            android:background="@null"
            android:hint="@string/modify_pwd_new_1"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/textColorC"
            android:textSize="16sp" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_bg_red_stroke_radius_10"
        android:backgroundTint="#2C3241"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/modify_pwd_confirm"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="80dp"
            android:background="@null"
            android:hint="@string/modify_pwd_confirm_1"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/textColorC"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/modify_pwd_btn"
        android:gravity="center"
        android:text="@string/modify_pwd_confirm_2"
        android:textColor="@color/white"
        android:textSize="17sp" />


</LinearLayout>