<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.me.FindPayPwdActivity">

    <include layout="@layout/view_title_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/reg_input_phone"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        style="@style/line2"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <EditText
            android:id="@+id/edit_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/reg_input_code"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btn_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:onClick="getFindCode"
            android:text="@string/reg_get_code"
            android:textColor="@color/reg_btn_code"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/line2"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <EditText
            android:id="@+id/edit_pwd_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/reg_input_pwd_1"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

    </LinearLayout>




    <View
        style="@style/line2"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />
    <TextView
        android:id="@+id/txTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="12dp"
        android:gravity="start"
        android:text="@string/modify_input_rule_tip"
        android:textColor="@color/grey1"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <EditText
            android:id="@+id/edit_pwd_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/reg_input_pwd_2"
            android:inputType="textPassword"
            android:maxLength="6"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        style="@style/line2"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" />

    <TextView
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_btn"
        android:gravity="center"
        android:onClick="findClick"
        android:text="@string/find_pwd_find"
        android:textColor="@color/white"
        android:textSize="17sp" />
</LinearLayout>
