<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context=".activity.login.BindPhoneActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_title"
        android:paddingTop="25dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:onClick="backClick"
            android:src="@mipmap/return_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/bind_phone"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="11dp"
                android:background="@null"
                android:hint="@string/reg_input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/white"
                android:textColorHint="@color/textColorB"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            style="@style/line2"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <EditText
                android:id="@+id/edit_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/reg_input_code"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/white"
                android:textColorHint="@color/textColorB"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:gravity="center_vertical"
                android:text="@string/reg_get_code"
                android:textColor="@color/reg_btn_code"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/line2"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_confirm"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="bind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>